# polylith-bug-report

./: README.md  hello.py  pyproject.toml  workspace.toml
